--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     },
     "extends": [
         "eslint:recommended",
+        "react-app",
         "plugin:react/recommended"
     ],
     "rules": {
