--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.5",
+    "express-generator": "^4.16.1",
     "firebase": "^6.3.0",
     "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
