--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.5",
     "axios": "^0.19.0",
+    "axios-mock-adapter": "^1.17.0",
     "express-generator": "^4.16.1",
     "firebase": "^6.3.0",
     "gh-pages": "^2.0.1",
