--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^8.0.5",
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.17.0",
+    "chromedriver": "^75.1.0",
     "express-generator": "^4.16.1",
     "firebase": "^6.3.0",
     "gh-pages": "^2.0.1",
+    "nightwatch": "^1.1.13",
+    "nightwatch-vrt": "^0.2.10",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -21,10 +24,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "testunit": "react-scripts test",
+    "test": "nightwatch",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "testui": "nightwatch"
   },
   "proxy": "http://localhost:5000/",
   "browserslist": {
