--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "salsaron",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rodriguezlucha.github.io/salsaron",
   "dependencies": {
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.5",
@@ -20,7 +21,6 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
-  "homepage": "http://rodriguezlucha.github.io/salsaron",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
