--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^8.0.5",
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.17.0",
+    "bootstrap": "^4.3.1",
     "chromedriver": "^75.1.0",
     "express-generator": "^4.16.1",
     "firebase": "^6.3.0",
@@ -19,7 +20,8 @@
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
