--- a/backend2/package.json
+++ b/backend2/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "apollo-server": "^2.9.7",
+    "bcryptjs": "^2.4.3",
+    "graphql": "^14.5.8",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
     "sqlite3": "^4.1.0"
